--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "resolveJsonModule": true,
+    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -17,6 +19,13 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
+    "paths": {
+      "@core/*" : ["src/app/core/*"],
+      "@modules/*" : ["src/app/modules/*"],
+      "@shared/*" : ["src/app/shared/*"],
+      "@home/*" : ["src/app/modules/home/*"],
+      "@tracks/*" : ["src/app/modules/tracks/*"]
+    },
     "useDefineForClassFields": false,
     "lib": [
       "ES2022",
